# explorer_board_power_tests

bare_metal/: CMakeLists.txt  Makefile  XCORE-AI-EXPLORER.xn
bare_metal/src/: 1tile_main.c  1tile_main_fill_all_unused.c  2tile_main.c  2tile_main_mem_op.c  2tile_main_vpu_op.c  main.xc  vpu_op.S
